# vanphubinh_backend

./: Cargo.toml
domain/: Cargo.toml
domain/src/: category.rs  uom.rs
infra/: Cargo.toml
infra/src/: database.rs  error.rs  lib.rs  response.rs  state.rs  util.rs  uuid.rs
interface/: Cargo.toml
interface/src/: command_bus.rs  lib.rs  query_bus.rs
interface/src/category/: handler.rs  route.rs
interface/src/uom/: handler.rs  route.rs
migration/src/: lib.rs
server/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/catalog/query/: list_paginated_categories_query.rs  mod.rs
service/src/measurement/: mod.rs
service/src/measurement/command/: create_uom_command.rs  mod.rs  update_uom_command.rs
service/src/measurement/query/: find_uom_by_id_query.rs  list_paginated_uoms_query.rs  mod.rs
src/: main.rs
